--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -27,7 +27,7 @@ whaleCol <- c("Beluga Whale: Endangered (SARA & COSEWIC)" = "cyan3",
                "Sowerby's Beaked Whale: Special Concern (SARA & COSEWIC)" = "red")
 whaleShape <- rep_len(15:20, length(names(whaleCol)))
 names(whaleShape) <- names(whaleCol)
-whaleSummaryTable <- data.frame("Species" = names(whaleShape))
+whaleSummaryTable <- data.frame("specIndex"= sub("\\:.*", "", names(whaleShape)) ,"Species" = names(whaleShape))
 ```
 
 ### **Whale Sightings Database (WSDB)**
@@ -62,12 +62,11 @@ Please note the following important disclaimers and caveats associated with sigh
 ```{r wsdb, include=FALSE, cache=FALSE}
 wsdbClipped <- master_intersect(wsdb_sf, mapDataList)
 
-if (!is.null(wsdbClipped$mapData)) {
-  wsdb_points <- sfcoords_as_cols(wsdbClipped$mapData)
-}
-
 if (!is.null(wsdbClipped$studyData)) {
   whaleSummaryTable <- add_col_to_whale_summary(whaleSummaryTable, "WSDB", wsdbClipped$studyData, "Legend")
+  summarySarTable <- add_col_to_sar_summary(summarySarTable, "WSDB", whaleSummaryTable, "specIndex", "WSDB")
+} else {
+ summarySarTable <- add_col_to_sar_summary(summarySarTable, "WSDB", NULL, "specIndex", "WSDB")
 }
 ```
 *
@@ -81,7 +80,7 @@ writeLines(Report_wsdb)
 ```
 ```{r wsdb-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Low. Security level: none. Map showing the search area defined by the user (red outline). Map displays information from the Whale Sightings Database (WSDB) (including sightings of groups of animals), for cetacean species in the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this map should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b> Absence may be related to low or no survey effort. Sightings information is known to underrepresent the presence of cetaceans, particularly deep diving species (e.g., beaked whales) that spend little time at the surface. This map also does not include acoustic detections. Sightings on land are an indicator that the sighting data have not yet been completely error-checked or that animals were sighted from shore.'}
 if (!is.null(wsdbClipped$studyData)) {
-  plot_rr_sf(areaMap, wsdb_points, attribute="Legend", colorMap = whaleCol, shapeMap = whaleShape)
+  plot_rr_sf(areaMap, wsdbClipped$mapData, attribute="Legend", colorMap = whaleCol, shapeMap = whaleShape)
 }
 ```
 
@@ -104,6 +103,9 @@ whiteheadClipped <- master_intersect(whitehead_sf, mapDataList)
 
 if (!is.null(whiteheadClipped$studyData)) {
   whaleSummaryTable <- add_col_to_whale_summary(whaleSummaryTable, "Whitehead", whiteheadClipped$studyData, "Legend")
+  summarySarTable <- add_col_to_sar_summary(summarySarTable, "Whitehead", whaleSummaryTable, "specIndex", "Whitehead")
+} else {
+ summarySarTable <- add_col_to_sar_summary(summarySarTable, "Whitehead", NULL, "specIndex", "Whitehead")
 }
 ```
 *
@@ -139,7 +141,11 @@ narwcClipped <- master_intersect(narwc_sf, mapDataList)
 
 if (!is.null(narwcClipped$studyData)) {
   whaleSummaryTable <- add_col_to_whale_summary(whaleSummaryTable, "NARWC", narwcClipped$studyData, "Legend")
-}
+  summarySarTable <- add_col_to_sar_summary(summarySarTable, "NARWC", whaleSummaryTable, "specIndex", "NARWC")
+ } else {
+   summarySarTable <- add_col_to_sar_summary(summarySarTable, "NARWC", NULL, "specIndex", "NARWC")
+ }
+
 
 ```
 *
@@ -175,7 +181,11 @@ obisClipped <- master_intersect(obis_cet_sf, mapDataList)
 
 if (!is.null(obisClipped$studyData)) {
   whaleSummaryTable <- add_col_to_whale_summary(whaleSummaryTable, "OBIS", obisClipped$studyData, "Legend")
-}
+  summarySarTable <- add_col_to_sar_summary(summarySarTable, "OBIS-Cetaceans", whaleSummaryTable, "specIndex", "OBIS")
+ } else {
+   summarySarTable <- add_col_to_sar_summary(summarySarTable, "OBIS-Cetaceans", NULL, "specIndex", "OBIS")
+ }
+
 
 ```
 *
@@ -194,6 +204,7 @@ if (!is.null(obisClipped$studyData)) {
 ```
 
 ```{r cetacean-summary-table, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+whaleSummaryTable <- subset(whaleSummaryTable, select = -c(specIndex))
 
 areaSums <- colSums(subset(whaleSummaryTable, select = -c(Species)))
 areaSums$Species <- "Area Total"
@@ -201,7 +212,6 @@ whaleSummaryTable <- rbind(whaleSummaryTable, areaSums)
 
 knitr::kable(whaleSummaryTable, align="l", caption = "INITIAL TEXT FINALIZE BEFORE USING OFFICIALLY. Summary of records present in cetacean databases used in this report. ", booktabs = T, escape = F, linesep = "") %>%
   kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
-
 
 ```
 
