--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -33,7 +33,8 @@ copy_rdata_files() # make sure data files are up to date.
 load(here::here("app/data/OpenData.RData"))
 load(here::here("app/data/OpenData_sardist.RData"))
 load(here::here("app/data/SecureData.RData"))
-
+listed_species <- listed_species[!c(listed_species$`COSEWIC status` == "No Status" & listed_species$`SARA status` == "No Status"), ]
+row.names(listed_species) <- NULL
 #load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
 
 ```
@@ -62,8 +63,8 @@ presentCode <- "P"
 
 <!-- # ```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', 'report_habitat_EN.Rmd', 'report_planning_EN.Rmd', 'report_SARA_EN.Rmd')} -->
 <!-- # ``` -->
-```{r child = '../Rmd/report_fish_EN.Rmd'}
-```
+<!--```{r child = '../Rmd/report_cetaceans_EN.Rmd'}
+```-->
 
 <!-- END  -->
 
