--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -56,3 +56,54 @@ if(!is.null(EBSAoutput$studyData)){
   plot_rr_sf(areaMap, EBSAoutput$mapData, "NONE")
 }
 ```
+
+### **`r mpa_rr$title`**
+
+
+```{r MPA-section, results='asis'}
+write_meta(mpa_rr)
+writeLines(noquote(mpa_rr$text))
+
+```
+
+#### ***Area-specific Draft Conservation Network Design search results ***
+
+```{r MPA-load-data}
+mpaClipped <- master_intersect(mpa_rr$data_sf,  mapDataList, getRegion=TRUE)
+
+if(!is.null(mpaClipped$studyData)) {
+  mpaTable <- mpa_table(mpaClipped$studyData)
+} else {
+  mpaTable <- NULL
+}
+
+```
+*
+```{r mpa-check, echo=FALSE, results='asis'}
+#function for overlap
+mpaCheckOuput <-if(!is.null(mpaClipped$studyData)){
+    "There are relevant records of areas that are part of the Draft Conservation Network Design in the search area. "
+  } else {
+    "There are no relevant records of areas that are part of the Draft Conservation Network Design in the search area."
+  }
+mpaCheckOuput<-noquote(mpaCheckOuput)
+writeLines(mpaCheckOuput)
+```
+
+```{r mpa-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none.Map of the Draft Conservation Network Design for the Scotian Shelf-Bay of Fundy Bioregion. '}
+if (!is.null(mpaClipped$regionData)){
+  plot_rr_sf(regionMap, mpaClipped$regionData, mpa_rr$attribute)
+}
+```
+
+```{r mpa-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map of the Draft Conservation Network Design in the search area defined by the user (red outline).'}
+if(!is.null(mpaClipped$studyData)){
+  plot_rr_sf(areaMap, mpaClipped$mapData,  mpa_rr$attribute)
+}
+```
+
+```{r mpa-table, echo=FALSE, results='asis', caption="MPA table"}
+if (!is.null(mpaTable)) {
+  knitr::kable(mpaTable, align="l", caption="Quality Tier: High Security level: none. Area and names of Marine Protected Areas located within study area..</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
