--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -24,17 +24,12 @@ Dataset description from the Open Data record [@OpenData_ebsa]: Ecologically and
 #function for overlap
 EBSAoutput <- master_intersect(EBSA_sf, mapDataList, getRegion=TRUE)
 
-```
-*
-```{r EBSA-check, echo=FALSE, results='asis'}
 #function for overlap
-Query_output_EBSA<-if(is.null(EBSAoutput$studyData)){
-    "The search area does not overlap with identified Ecologically and Biologically Significant Areas (EBSA)."
+Query_output_EBSA <- if(is.null(EBSAoutput$studyData)){
+    "* The search area does not overlap with identified Ecologically and Biologically Significant Areas (EBSA)."
   } else {
-    "The search area overlaps with identified Ecologically and Biologically Significant Areas (EBSA)."
+    "* The search area overlaps with identified Ecologically and Biologically Significant Areas (EBSA)."
   }
-Query_output_EBSA2<-noquote(Query_output_EBSA)
-
 writeLines(Query_output_EBSA)
 
 ```
@@ -68,7 +63,7 @@ writeLines(noquote(mpa_rr$text))
 
 #### ***Area-specific Draft Conservation Network Design search results ***
 
-```{r MPA-load-data}
+```{r MPA-load-data, results='asis'}
 mpaClipped <- master_intersect(mpa_rr$data_sf,  mapDataList, getRegion=TRUE)
 
 if(!is.null(mpaClipped$studyData)) {
@@ -77,28 +72,31 @@ if(!is.null(mpaClipped$studyData)) {
   mpaTable <- NULL
 }
 
-```
-*
-```{r mpa-check, echo=FALSE, results='asis'}
 #function for overlap
-mpaCheckOuput <-if(!is.null(mpaClipped$studyData)){
-    "There are relevant records of areas that are part of the Draft Conservation Network Design in the search area. "
+mpaCheckOuput <- if(!is.null(mpaClipped$studyData)){
+    "* There are relevant records of areas that are part of the Draft Conservation Network Design in the search area."
   } else {
-    "There are no relevant records of areas that are part of the Draft Conservation Network Design in the search area."
+    "* There are no relevant records of areas that are part of the Draft Conservation Network Design in the search area."
   }
-mpaCheckOuput<-noquote(mpaCheckOuput)
+
 writeLines(mpaCheckOuput)
 ```
 
 ```{r mpa-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none.Map of the Draft Conservation Network Design for the Scotian Shelf-Bay of Fundy Bioregion. '}
 if (!is.null(mpaClipped$regionData)){
-  plot_rr_sf(regionMap, mpaClipped$regionData, mpa_rr$attribute)
+  mpaLabels <- filter(st_centroid(mpaClipped$regionData), Id > 0) %>% dplyr::select(c("Id"))
+  mpaPlotList <- plot_rr_sf(regionMap, mpaClipped$regionData, mpa_rr$attribute, getColorMap=TRUE,
+                            labelData = mpaLabels, labelAttribute = "Id")
+  mpaPlotList$polyMap
 }
 ```
 
 ```{r mpa-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map of the Draft Conservation Network Design in the search area defined by the user (red outline).'}
 if(!is.null(mpaClipped$studyData)){
-  plot_rr_sf(areaMap, mpaClipped$mapData,  mpa_rr$attribute)
+  mpaStudyLabels <- filter(st_centroid(mpaClipped$studyData), Id > 0) %>% dplyr::select(c("Id"))
+
+  plot_rr_sf(areaMap, mpaClipped$studyData, mpa_rr$attribute, colorMap = mpaPlotList$colorMap,
+             labelData = mpaStudyLabels, labelAttribute = "Id")
 }
 ```
 
