--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -142,11 +142,11 @@ TO BE CHECKED BEFORE MERGING!
 This section summarizes the SAR coverage of the data sources used in the report. A summary of the data sources containing records of each species with a status under COSEWIC or SARA in the study area is provided.  The caveats and conditions for each individual data source are detailed above in their dedicated sections of the report. An absence of records is not necessarily an absence of the species in the area.  Data sources included below are limited to species point data. A description of the different sources of information for Species at Risk is also available in the infographic: <https://github.com/dfo-mar-odis/shinySpatialApp/blob/master/app/data/misc/SAR-information-type-reproducible-reports.pdf>)
 
 ```{r sar-obs-summary-table}
-  absentCode <- "A"
-  presentCode <- "P"
+  absentCode <- "&#x274C;"
+  presentCode <- "&#x2714;"
   summarySarTable[is.na(summarySarTable)] <- absentCode
  formatedTable <- mutate_all(summarySarTable, ~ cell_spec(., color = ifelse(. == presentCode, "white", "black"),
-                  background = ifelse(. == presentCode, "green", "white")))
+                  background = ifelse(. == presentCode, "green", "white"), escape = FALSE))
 
 knitr::kable(formatedTable, align="l", caption = "INITIAL TEXT FINALIZE BEFORE USING OFFICIALLY. Summary of SAR records present in data sources used in this report. ", booktabs = T, escape = F, linesep = "") %>%
   kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
@@ -160,7 +160,7 @@ knitr::kable(formatedTable, align="l", caption = "INITIAL TEXT FINALIZE BEFORE U
   summaryHabTable$Obs <- ifelse(obsColumn, presentCode, absentCode)
   
   summaryHabTable <- mutate_all(summaryHabTable, ~ cell_spec(., color = ifelse(. == presentCode, "white", "black"),
-                  background = ifelse(. == presentCode, "green", "white")))
+                  background = ifelse(. == presentCode, "green", "white"), escape = FALSE))
 
   names(summaryHabTable) <- c("Species", "Observations", "[SAR Distribution](#sardist-section)", "SDM", "Important Habitat", "Critical Habitat")
 
