--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -1,5 +1,7 @@
 ## **AREAS DESIGNATED FOR SPATIAL PLANNING**
 
+This section describes information relevant to spatial planning from a variety of sources. Area-specific outputs are provided in sub-sections labelled according to the data source. Descriptions of the source data and appropriate references and contacts are provided at the beginning of each sub-section.
+
 ### **Ecologically and Biologically Significant Areas (EBSA)**
 
 Contact: [carissa.philippe\@dfo-mpo.gc.ca](mailto:carissa.philippe@dfo-mpo.gc.ca){.email}\
@@ -7,7 +9,8 @@ Last retrieved on: January 21, 2021 from Open Data\
 <https://open.canada.ca/data/en/dataset/d2d6057f-d7c4-45d9-9fd9-0a58370577e0>\
 Quality Tier: High\
 Security level: none\
-Data use constraints: none
+Data use constraints: none\
+EBSA Story Map: <https://gisp.dfo-mpo.gc.ca/portal/apps/MapJournal/index.html?appid=b91f85de60f44a7b90633e4b43e3916a>
 
 Dataset description from the Open Data record [@OpenData_ebsa]: Ecologically and Biologically Significant Areas (EBSAs) are areas within Canada's oceans that have been identified through formal scientific assessments as having special biological or ecological significance when compared with the surrounding marine ecosystem. Failure to define an area as an EBSA does not mean that it is unimportant ecologically. All areas serve ecological functions to some extent and require sustainable management. Rather, areas identified as EBSAs should be viewed as the most important areas where, with existing knowledge, regulators and marine users should be particularly risk averse to ensure ecosystems remain healthy and productive. EBSA information is used to inform marine planning, including environmental assessment and the siting of marine-based activities, by:
 
